# web-archiver

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/sql/: debug_available_url.sql  get_archived_sites.sql  get_content.sql  get_job_pages.sql  get_site_jobs.sql
backend/archiver/: __init__.py  basic_archiver.py
backend/archiver/sql/: archive_content.sql  insert_job.sql
data/: docker-compose.yml
data/init/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ArchiveForm.jsx  Header.jsx  SiteDetails.jsx  SitesSidebar.jsx
frontend/src/components/ArchiveForm/: ArchiveForm.css  ArchiveForm.jsx
frontend/src/components/Header/: Header.css  Header.jsx
frontend/src/components/SiteDetails/: SiteDetails.css  SiteDetails.jsx
frontend/src/components/SitesSidebar/: SitesSidebar.css  SitesSidebar.jsx
frontend/src/hooks/: useArchiveData.js
frontend/src/models/: ViewingPage.js
frontend/src/services/: ArchiveService.js
frontend/src/styles/: global.css  variables.css
frontend/web-archiver/: package.json
frontend/web-archiver/src/: App.css  App.jsx  index.css
