[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]>=0.116.1",
    "lxml>=6.0.1",
    "psycopg[binary,pool]>=3.2.9",
    "stealth-requests>=2.0.4",
]
